# diff_tabela_precos

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
help/: pandas - loc e iloc.txt  pandas_aprendizado.py
src/: .env  __init__.py  bd_df.py  dif_df.py  excel_df.py  main.py  sqlserver_conn.py
